2010-02-09 [colin]	3.7.5cvs11

	* configure.ac
		Bump up GTK+ requirement to 2.10
	* src/Makefile.am
	* src/compose.c
	* src/crash.c
	* src/foldersel.c
	* src/main.c
	* src/mainwindow.c
	* src/messageview.c
	* src/messageview.h
	* src/prefs_actions.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/prefs_ext_prog.c
	* src/prefs_filtering_action.c
	* src/prefs_fonts.c
	* src/prefs_image_viewer.c
	* src/prefs_matcher.c
	* src/prefs_msg_colors.c
	* src/prefs_summaries.c
	* src/prefs_template.c
	* src/printing.c
	* src/printing.h
	* src/quote_fmt.c
	* src/summaryview.c
	* src/textview.c
	* src/gtk/Makefile.am
	* src/gtk/about.c
	* src/gtk/gtkcmclist.c
	* src/gtk/gtkcmctree.c
	* src/gtk/gtkutils.c
	* src/gtk/quicksearch.c
		Remove all compile-time conditionals depending on
		GTK+ < 2.10
	* src/gedit-print.c
	* src/gedit-print.h
	* src/gtk/gtksourceprintjob.c
	* src/gtk/gtksourceprintjob.h
		Remove libgnomeprint-based printing system (and
		command-line-based printing system) as GTK+ 2.10
		ships with print support.

2010-02-08 [mir]	3.7.5cvs10

	* src/compose.c
	    Avoid displaying Bcc headers in message sent
	    to NNTP servers. Thanks to Henning Mersch.


2010-02-08 [pawel]	3.7.5cvs9

	* src/mimeview.c
		Make tooltips less cryptic
	* src/gtk/description_window.c
		Improve window size calculation

2010-02-08 [pawel]	3.7.5cvs8

	* src/compose.c
	* src/compose.h
	* src/common/utils.c
	* src/common/utils.h
	* src/gtk/authors.h
		Fix Bug 2058 "use in-reply-to info passed in mailto: links"
		Patch by Laurent Bigonville with slight modifications

2010-02-03 [pawel]	3.7.5cvs7

	* m4/.cvsignore
		Add some libtool files to ignore

2010-02-03 [pawel]	3.7.5cvs6

	* src/plugins/trayicon/trayicon.c
		Save and then restore focus when closing/minimizing to tray

2010-02-03 [mir]	3.7.5cvs5

	* src/addrindex.c
	* src/editldap.c
	* src/ldapctrl.c
	* src/ldapctrl.h
	* src/ldapquery.c
	* src/ldapupdate.c
	    Save LDAP password encrypted. See bug 2113.


2010-02-03 [colin]	3.7.5cvs4
