@@ -3952,3 +3952,4 @@
 ( cvs diff -u -r 1.83.2.158 -r 1.83.2.159 src/mimeview.c;  cvs diff -u -r 1.5.2.28 -r 1.5.2.29 src/gtk/description_window.c;  ) > 3.7.5cvs9.patchset
 ( cvs diff -u -r 1.382.2.542 -r 1.382.2.543 src/compose.c;  ) > 3.7.5cvs10.patchset
 ( cvs diff -u -r 1.654.2.4023 -r 1.654.2.4024 configure.ac;  cvs diff -u -r 1.155.2.95 -r 1.155.2.96 src/Makefile.am;  cvs diff -u -r 1.382.2.543 -r 1.382.2.544 src/compose.c;  cvs diff -u -r 1.23.2.33 -r 1.23.2.34 src/crash.c;  cvs diff -u -r 1.26.2.44 -r 1.26.2.45 src/foldersel.c;  cvs diff -u -r -1.1.2.15 -r -1.1.2.16 src/gedit-print.c;  cvs diff -u -r -1.1.2.6 -r -1.1.2.7 src/gedit-print.h;  cvs diff -u -r 1.115.2.223 -r 1.115.2.224 src/main.c;  cvs diff -u -r 1.274.2.304 -r 1.274.2.305 src/mainwindow.c;  cvs diff -u -r 1.94.2.208 -r 1.94.2.209 src/messageview.c;  cvs diff -u -r 1.19.2.24 -r 1.19.2.25 src/messageview.h;  cvs diff -u -r 1.60.2.70 -r 1.60.2.71 src/prefs_actions.c;  cvs diff -u -r 1.204.2.193 -r 1.204.2.194 src/prefs_common.c;  cvs diff -u -r 1.103.2.126 -r 1.103.2.127 src/prefs_common.h;  cvs diff -u -r 1.3.2.24 -r 1.3.2.25 src/prefs_ext_prog.c;  cvs diff -u -r 1.1.4.62 -r 1.1.4.63 src/prefs_filtering_action.c;  cvs diff -u -r 1.4.2.25 -r 1.4.2.26 src/prefs_fonts.c;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/prefs_image_viewer.c;  cvs diff -u -r 1.43.2.82 -r 1.43.2.83 src/prefs_matcher.c;  cvs diff -u -r 1.1.2.40 -r 1.1.2.41 src/prefs_msg_colors.c;  cvs diff -u -r 1.1.2.63 -r 1.1.2.64 src/prefs_summaries.c;  cvs diff -u -r 1.12.2.71 -r 1.12.2.72 src/prefs_template.c;  cvs diff -u -r 1.1.2.28 -r 1.1.2.29 src/printing.c;  cvs diff -u -r 1.1.2.7 -r 1.1.2.8 src/printing.h;  cvs diff -u -r 1.8.2.40 -r 1.8.2.41 src/quote_fmt.c;  cvs diff -u -r 1.395.2.416 -r 1.395.2.417 src/summaryview.c;  cvs diff -u -r 1.96.2.220 -r 1.96.2.221 src/textview.c;  cvs diff -u -r 1.20.2.23 -r 1.20.2.24 src/gtk/Makefile.am;  cvs diff -u -r 1.4.2.76 -r 1.4.2.77 src/gtk/about.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/gtk/gtkcmclist.c;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/gtk/gtkcmctree.c;  cvs diff -u -r -1.1.2.13 -r -1.1.2.14 src/gtk/gtksourceprintjob.c;  cvs diff -u -r -1.1.2.5 -r -1.1.2.6 src/gtk/gtksourceprintjob.h;  cvs diff -u -r 1.5.2.88 -r 1.5.2.89 src/gtk/gtkutils.c;  cvs diff -u -r 1.1.2.88 -r 1.1.2.89 src/gtk/quicksearch.c;  ) > 3.7.5cvs11.patchset
+( cvs diff -u -r 1.83.2.159 -r 1.83.2.160 src/mimeview.c;  ) > 3.7.5cvs12.patchset
